--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-test-renderer": "^17.0.2"
   },
   "dependencies": {
+    "mockdate": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
