--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "jest": "^27.5.1"
   },
   "dependencies": {
-    "mockdate": "^3.0.5"
+    "mockdate": "^3.0.5",
+    "ts-jest": "^27.1.4"
   }
 }
